# device-statistics

./: .dockerignore  .env-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  custom-entrypoint.sh  docker-compose.yaml  makejwt.sh  publish.py  pyproject.toml
.github/actions/setup-environment/: action.yaml
.github/workflows/: pipeline.yml
alembic/: env.py
alembic/versions/: 43fe13d65516_initial_migration.py  6ad3c1d5a511_initial_migration.py  974dceec85ea_initial_migration.py
app/: __init__.py  config.py  main.py
app/core/: enums.py  models.py  repositories.py
app/database/: config.py  models.py
app/device_registration/: __init__.py  config.py  events.py  main.py  repositories.py
app/device_statistics/: auth.py  config.py  events.py  main.py
app/device_statistics/api/: __init__.py
app/statistics/: config.py  events.py  main.py
app/sub_apps/: __init__.py  device_registration.py  statistics.py
config/: db-alembic.env.example  db.env.example  device-registration-app.env.example  device-statistics-app.env.example
jwt/: .gitignore
kubernetes_deployment/: argocd-bootstrap.yaml
kubernetes_deployment/helm-charts/ds-app/: Chart.yaml  values.yaml
kubernetes_deployment/helm-charts/ds-application/: Chart.yaml  values.yaml
kubernetes_deployment/helm-charts/ds-job/: Chart.yaml  values.yaml
kubernetes_deployment/helm-values/dev/: api-device-registration.yaml  api-device-statistics.yaml  api-device-statistics.yaml.yaml  ds-app.yaml  job-database-migrations.yaml  postgresql.yaml
kubernetes_deployment/helm-values/prod/: ds-app.yaml
kubernetes_deployment/helm-values/test/: ds-app.yaml
kubernetes_deployment/root_app/dev/: app-device-registration.yaml  app-device-statistics.yaml  configmaps.yaml  ds-app.yaml  job-database-migrations.yaml  namespace.yaml  networkpolicies.yaml  postgresql-database.yaml  project.yaml  secrets.yaml
kubernetes_deployment/root_app/prod/: configmaps.yaml  (+6 more)
src/statistic/: __init__.py
tests/: conftest.py
tests/device_registration/: __init__.py  conftest.py
tests/device_statistics/: __init__.py  conftest.py
(+42 files in other folders)
